# attachment

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  config
attachments/: CMakeLists.txt
attachments/envoy/: CMakeLists.txt  build_template  config.go  filter.go  go.mod  go.sum  utils.go
attachments/envoy/1.31/: CMakeLists.txt  build.sh  build_template  config.go  filter.go  go.mod  go.sum
attachments/envoy/1.32/: build.sh  config.go  filter.go  go.mod
attachments/envoy/1.33/: CMakeLists.txt  build.sh  build_template  config.go  go.mod  go.sum
attachments/envoy/1.34/: CMakeLists.txt  build_template  config.go  go.mod  go.sum
attachments/kong/: handler.lua  lua_attachment_wrapper.c  nano_ffi.lua  open-appsec-waf-kong-plugin-1.0.0-1.rockspec
attachments/kong/plugins/: cloudguard-waf-kong-plugin-1.0.0-1.rockspec  open-appsec-waf-kong-plugin-1.0.0-1.rockspec
attachments/kong/plugins/open-appsec-waf-kong-plugin/: cloudguard-waf-kong-plugin-1.0.0-1.rockspec  handler.lua  lua_attachment_wrapper.c  nano_ffi.lua  open-appsec-waf-kong-plugin-1.0.0-1.rockspec  schema.lua
attachments/nano_attachment/: CMakeLists.txt  nano_attachment.c  nano_attachment.h  nano_attachment_io.c  nano_attachment_io.h  nano_attachment_metric.c  nano_attachment_metric.h  nano_attachment_sender.c  nano_attachment_sender.h  nano_attachment_sender_thread.c  nano_attachment_sender_thread.h  nano_attachment_thread.c  nano_attachment_thread.h  nano_blockpage.h  nano_compression.c  nano_compression.h  nano_configuration.c  nano_configuration.h  nano_initializer.c  nano_initializer.h  nano_utils.c  nano_utils.h
attachments/nano_attachment/include/: mock_nano_access.h  mock_nano_attachment_io.h  mock_nano_attachment_sender.h  mock_nano_attachment_thread.h  mock_nano_compression.h  mock_nano_configuration.h  mock_nano_initializer.h  mock_nano_poll.h  mock_nano_sender_thread.h  mock_nano_socket.h  mock_nano_stat.h  mock_shmem_ipc.h
attachments/nano_attachment/nano_attachment_ut/: CMakeLists.txt  nano_attachment_io_ut.cc  nano_attachment_metrics_ut.cc  nano_attachment_sender_ut.cc  nano_attachment_ut.cc  nano_compression_ut.cc  nano_configuration_ut.cc  nano_initializer_ut.cc  nano_sender_thread_ut.cc  nano_thread_ut.cc
attachments/nano_attachment/nano_attachment_util/: CMakeLists.txt  nano_attachment_util.cc
attachments/nano_attachment/nano_attachment_util/nano_attachment_util_ut/: CMakeLists.txt  nano_attachment_util_ut.cc
attachments/nginx/: CMakeLists.txt
attachments/nginx/nginx_attachment_util/: CMakeLists.txt  nginx_attachment_util.cc
attachments/nginx/ngx_module/: CMakeLists.txt  nginx_version_configuration.sh  nginx_version_extractor.sh  ngx_cp_compression.c  ngx_cp_compression.h  ngx_cp_custom_response.c  ngx_cp_custom_response.h  ngx_cp_failing_state.c  ngx_cp_failing_state.h  ngx_cp_hook_threads.c  ngx_cp_hook_threads.h  ngx_cp_hooks.c  ngx_cp_hooks.h  ngx_cp_http_parser.c  ngx_cp_http_parser.h  ngx_cp_http_usercheck.h  ngx_cp_initializer.c  ngx_cp_initializer.h  ngx_cp_io.c  ngx_cp_io.h  ngx_cp_metric.c  ngx_cp_metric.h  ngx_cp_static_content.c  ngx_cp_static_content.h  ngx_cp_thread.c  ngx_cp_thread.h  ngx_cp_utils.c  ngx_cp_utils.h  ngx_http_cp_attachment_module.c  ngx_http_cp_attachment_module.h  ngx_modules.c
core/: CMakeLists.txt
core/attachments/http_configuration/: CMakeLists.txt  http_configuration.cc
core/compression/: CMakeLists.txt  compression_utils.cc
core/include/attachments/: http_configuration.h  nano_attachment.h  nano_attachment_common.h  nano_attachment_util.h  nginx_attachment_common.h  nginx_attachment_util.h  shmem_ipc_2.h
core/shmem_ipc/: CMakeLists.txt  shared_ring_queue.c
core/shmem_ipc_2/: CMakeLists.txt  shared_ipc_debug.h  shared_ring_queue.c  shared_ring_queue.h  shmem_ipc.c
docker/: CMakeLists.txt  Dockerfile
docker/openappsec-envoy-attachments/: CMakeLists.txt  Dockerfile  prepare_attachment.sh
docker/openappsec-kong-gateway-plugin/: CMakeLists.txt  Dockerfile
docker/openappsec-kong-plugin/: CMakeLists.txt  Dockerfile
docker/openappsec-waf-webhook/: CMakeLists.txt  Dockerfile  keygen.py  run.sh  secretgen.py  webhook_server.py
nodes/: CMakeLists.txt
nodes/nginx_attachment/: CMakeLists.txt  install-nginx-attachment.sh
