add_definitions(-DUSERSPACE)

add_library(osrc_nginx_attachment_util SHARED nginx_attachment_util.cc)
target_link_libraries(osrc_nginx_attachment_util http_configuration)

install(TARGETS osrc_nginx_attachment_util DESTINATION lib)
install(TARGETS osrc_nginx_attachment_util DESTINATION nginx_attachment/lib)
